# incident-triage-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CONCEPTS.md  Dockerfile  README.md  docker-compose.live.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
docs/: learnings.md
evals/: README.md  harness.ts  incident-outcomes.eval.ts  judges.ts  live-incident-triage.eval.ts  quality-gates.ts  recommendation-quality.eval.ts  recorded-triage-quality.eval.ts  vitest.evals.config.ts
scripts/: run-live-e2e-probe.ts  run-recorded-triage-demo.ts  run-recorded-triage.ts  run_live_e2e_probe.py  seed_loki_logs.py
services/: __init__.py  synthetic-checkout-service.ts  synthetic_checkout_service.py
src/: cli.ts  config.ts  domain.ts  evidence.ts  grafana.ts  llm.ts  logger.ts  loki.ts  mock-decisions.ts  policy.ts  recorded-observability.ts  runtime-summary.ts  scoring.ts  server.ts  workflow.ts
tests/: cli.test.ts  compose-config.test.ts  config.test.ts  domain.test.ts  e2e-grafana-loki.test.ts  e2e-live-service-llm.test.ts  evidence.test.ts  grafana.test.ts  live-e2e-probe.test.ts  llm.test.ts  loki.test.ts  observability-integration.test.ts  outcome-helpers.test.ts  policy.test.ts  recorded-triage-demo.test.ts  recorded-triage.test.ts  runtime-summary.test.ts  scoring.test.ts  server.test.ts  skill-contract.test.ts  synthetic-checkout-service.test.ts  test_cli.py  test_compose_config.py  test_config.py  test_domain.py  test_e2e_grafana_loki.py  test_e2e_real_service_live_llm.py  test_grafana.py  test_llm.py  (+14 more)
(+53 files in other folders)
